# CppProjects

./: CMakeLists.txt
CGPA/: CMakeLists.txt  main.cpp
CGPA/data/: input.txt
CGPA/include/: FileManifest.h  FunctionalController.h  cgpaCalculator.h  cgpaInfor.h
CGPA/src/: FunctionalController.cpp  cgpaCalculator.cpp  cgpaInfor.cpp
